tests/golden/parse_errors/generic_struct_missing_args.cd
struct Box<T> { value: T }

let value = Box<> { value: 1 };
